--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyReports"
         tools:targetApi="31">
+        <activity
+            android:name=".bottom_nav.files.FilesFragment"
+            android:exported="false" />
+        <activity
+            android:name=".bottom_nav.add_file.AddFileFragment"
+            android:exported="false" />
+        <activity
+            android:name=".bottom_nav.main_profile.MainProfileFragment"
+            android:exported="false" />
         <activity
             android:name=".ResetPasswordActivity"
             android:exported="false" />
