--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <application
         android:allowBackup="true"
@@ -16,9 +18,6 @@
         tools:targetApi="31">
         <activity
             android:name=".bottom_nav.files.FilesFragment"
-            android:exported="false" />
-        <activity
-            android:name=".bottom_nav.add_file.AddFileFragment"
             android:exported="false" />
         <activity
             android:name=".bottom_nav.main_profile.MainProfileFragment"
